trunk/Archive2/d9/58c8f6cd5fe1a0/output
In file included from /usr/include/c++/4.8/algorithm:61:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algobase.h: In instantiation of '_OI std::__copy_move_a(_II, _II, _OI) [with bool _IsMove = true; _II = std::_List_iterator<int>; _OI = main()::__lambda0]':
/usr/include/c++/4.8/bits/stl_algobase.h:428:38:   required from '_OI std::__copy_move_a2(_II, _II, _OI) [with bool _IsMove = true; _II = std::_List_iterator<int>; _OI = main()::__lambda0]'
/usr/include/c++/4.8/bits/stl_algobase.h:492:47:   required from '_OI std::move(_II, _II, _OI) [with _II = std::_List_iterator<int>; _OI = main()::__lambda0]'
main.cpp:14:6:   required from here
/usr/include/c++/4.8/bits/stl_algobase.h:382:57: error: no type named 'value_type' in 'struct std::iterator_traits<main()::__lambda0>'
       typedef typename iterator_traits<_OI>::value_type _ValueTypeO;
                                                         ^
/usr/include/c++/4.8/bits/stl_algobase.h:387:9: error: no type named 'value_type' in 'struct std::iterator_traits<main()::__lambda0>'
         && __are_same<_ValueTypeI, _ValueTypeO>::__value);
         ^
